--- a/index.html
+++ b/index.html
@@ -302,6 +302,30 @@
             transition: transform 0.3s;
         }
 
+            .portfolio-item {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            margin-bottom: 2rem;
+            }
+
+            .portfolio-image {
+            width: 100%;
+            max-height: 300px; /* batasi tinggi kalau perlu */
+            overflow: hidden;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            }
+
+            .portfolio-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* penting: gambar tidak terdistorsi */
+            display: block;
+            }
+
+
+        
         .portfolio-content {
             padding: 1.5rem;
         }
@@ -504,10 +528,10 @@
             <h2>Portfolio</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <div class="portfolio-image">E-Commerce</div>
+                    <div class="portfolio-image"><img src="assets/ecommerce.jpg" alt=""></div>
                     <div class="portfolio-content">
-                        <h3>E-Commerce Website</h3>
-                        <p>Platform e-commerce modern dengan fitur lengkap seperti keranjang belanja, payment gateway, dan admin dashboard. Dibangun dengan teknologi terkini untuk performa optimal.</p>
+                        <h3>HNZSTORE</h3>
+                        <p>Membangun platform e-commerce untuk penjualan ikan guppy dan produk akuarium lainnya menggunakan Laravel, Tailwind CSS, React, RESTful API, dan MySQL. Website ini dirancang untuk memberikan pengalaman pengguna yang responsif dan sistem transaksi yang efisien..</p>
                         <div class="portfolio-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
@@ -521,10 +545,10 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="portfolio-image">Restaurant</div>
+                    <div class="portfolio-image"><img src="assets/simp.jpg" alt=""></div>
                     <div class="portfolio-content">
-                        <h3>Restaurant Management System</h3>
-                        <p>Sistem manajemen restoran yang mencakup pemesanan online, manajemen menu, dan laporan penjualan. Interface yang user-friendly untuk staff dan pelanggan.</p>
+                        <h3>Sistem Informasi Manajemen Perkapalan</h3>
+                        <p>Sistem informasi berbasis web untuk pengelolaan data operasional kapal seperti jadwal pelayaran, data kru, dan laporan aktivitas kapal, dibangun menggunakan Laravel, Tailwind CSS, dan MySQL, dengan fokus pada efisiensi dan struktur data yang terorganisir.</p>
                         <div class="portfolio-tech">
                             <span class="tech-tag">PHP</span>
                             <span class="tech-tag">MySQL</span>
