--- a/index.html
+++ b/index.html
@@ -535,8 +535,9 @@
                         <div class="portfolio-tech">
                             <span class="tech-tag">React</span>
                             <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
-                            <span class="tech-tag">Express.js</span>
+                            <span class="tech-tag">MySQL</span>
+                            <span class="tech-tag">Tailwind</span>
+                            <span class="tech-tag">PHP</span>
                         </div>
                         <div class="portfolio-links">
                             <a href="#" target="_blank">Live Demo</a>
@@ -552,7 +553,7 @@
                         <div class="portfolio-tech">
                             <span class="tech-tag">PHP</span>
                             <span class="tech-tag">MySQL</span>
-                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">Tailwind</span>
                             <span class="tech-tag">Bootstrap</span>
                         </div>
                         <div class="portfolio-links">
